css/customstyles.css
body {
	background:					url('../img/typinghands.jpg') no-repeat center center;
	min-height:					100%;
	-webkit-background-size: 	cover;
	-moz-background-size: 		cover;
	background-size:			cover;
	min-width:					350px;
}

#mainheader {
	margin-top: 		0px 				!important;
	display:			block;
	position:			relative;
	background-color:	#000;
	color:				#eee;
}

#siteheading {
	position: 			relative;
	display:			inline-block;
	margin-left:		10px;
	margin-right: 		10px;
}

#linkpanel {
	position:			relative;			
	float: 				right;
	display:			inline-block;
	margin-right:		10px;
}

#linkbox {
	margin-left: 2px;
	margin-right: 2px;
}

.linkbutton {
	height: 32px;
}

#navmain {
	
}

.navbar-inverse .dropdown-menu
{
	background-color: 	#000;
}

.navbar-inverse .open
{
	background-color: 	#000;
}

.navbar-inverse a:link {
	color: #ddd;
}

.navbar-inverse a:hover {
	color: #fff;
}

.navbar-inverse a:active {
	color: #fff;
}

.navbar-inverse a:visited {
	color: #ddd;
}


footer {
	position: fixed;
    bottom: 0;
    width: 100%;
    height: 40px;
	color:	#eee;
	background-color: #000;
}

#main {
	display:			block;
	position:			relative;
}

.gi2{font-size: 2em;}
.gi3{font-size: 3em;}
.gi4{font-size: 4em;}
.gi5{font-size: 5em;}

